--- a/src/app/components/header/header.scss
+++ b/src/app/components/header/header.scss
@@ -1,3 +1,4 @@
+:host { display: block; }
 .header {
   background: var(--imd-white);
   width: 100%;
