--- a/src/app/components/hero/hero.scss
+++ b/src/app/components/hero/hero.scss
@@ -1,3 +1,4 @@
+:host { display: block; }
 .hero {
   background: var(--imd-orange);
   color: var(--imd-white);
