--- a/src/app/components/qualifications-nav/qualifications-nav.scss
+++ b/src/app/components/qualifications-nav/qualifications-nav.scss
@@ -1,3 +1,4 @@
+:host { display: block; }
 .quals {
   width: 100%;
   background: var(--imd-navy);
