--- a/src/app/components/quote/quote.scss
+++ b/src/app/components/quote/quote.scss
@@ -1,3 +1,4 @@
+:host { display: block; }
 .quote {
   width: 100%;
   background: linear-gradient(rgba(0, 4, 75, 0.78), rgba(0, 4, 75, 0.78)), var(--imd-navy);
